name:                AsyncChain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adamczykm/AsyncChain#readme
license:             BSD3
license-file:        LICENSE
author:              Michał Adamczyk
maintainer:          michal.anks@gmail.com
copyright:           2018 Michał Adamczyk
category:            Concurrency, Library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AsyncChain
  build-depends:       base >= 4.7 && < 5
                     , async
                     , HList
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamczykm/AsyncChain
